--- a/text/s1-c09-the-index.textile
+++ b/text/s1-c09-the-index.textile
@@ -4,6 +4,6 @@ Git has two places that content states are stored.  The working directory stores
 
 The index was called the cache for a while, because that's largely what it does.  It is a staging area for changes that are made to files or trees that are not committed to your repository yet.  It acts as sort of a middle ground between your working directory and your repository.  What is in it when you run 'git commit' is what the tree that your commit object points to will look like.
 
-.note Early on, the index was called the 'cache' or the 'current directory cache'
+note.  Early on, the index was called the 'cache' or the 'current directory cache'
 
 It is also used to speed up some operations. It keeps track of the state of all the files in your working directory so you can quickly see what has been modified since the last commit.
