--- a/text.textile
+++ b/text.textile
@@ -16,19 +16,19 @@ h3. Installing on Linux
 
 If you are installing from source, it will go something like the standard:
 
-shell. $>wget http://kernel.org/pub/software/scm/git/git-1.5.4.4.tar.bz2
-$>tar jxpvf git-1.5.4.4.tar.bz2
-$>cd git-1.5.4.4
-$>make prefix=/usr all doc info
-$>sudo make prefix=/usr install install-doc install-info
+shell. $ wget http://kernel.org/pub/software/scm/git/git-1.5.4.4.tar.bz2
+$ tar jxpvf git-1.5.4.4.tar.bz2
+$ cd git-1.5.4.4
+$ make prefix=/usr all doc info
+$ sudo make prefix=/usr install install-doc install-info
 
 If you are running Ubuntu or another Debian based system, you can run
 
-shell. $>apt-get git-core
+shell. $ apt-get git-core
 
 or on RedHat based systems, you can sometimes run:
 
-shell. $>yum install git-core
+shell. $ yum install git-core
 
 
 h3. Installing on Mac
@@ -861,7 +861,7 @@ shell. $ git diff master..experiment > experiment.patch
 
 You can then email that file to anyone, who could apply it with the '-p1' argument:
 
-shell. $>patch -p1 < ~/experiment.patch 
+shell. $ patch -p1 < ~/experiment.patch 
 patching file lib/simplegit.rb
 
 * "git diff":http://www.kernel.org/pub/software/scm/git/docs/git-diff.html
@@ -886,7 +886,7 @@ shell. git-branch.txt
 
 We can see we are now on our new branch.  This means that if we modify a file and commit it, this branch will include that change, but the 'master' branch will not have it yet.  So, we add a new method to our library and commit it.
 
-shell. $> vim lib/simplegit.rb; git commit -a -m 'added lstree function'
+shell. $  vim lib/simplegit.rb; git commit -a -m 'added lstree function'
 Created commit 1a8c32e: added lstree function
  1 files changed, 4 insertions(+), 0 deletions(-)
  
