--- a/text/s2-c06-git-diff.textile
+++ b/text/s2-c06-git-diff.textile
@@ -30,7 +30,7 @@ shell. $ git diff master..experiment > experiment.patch
 
 You can then email that file to anyone, who could apply it with the '-p1' argument:
 
-shell. $>patch -p1 < ~/experiment.patch 
+shell. $ patch -p1 < ~/experiment.patch 
 patching file lib/simplegit.rb
 
 * "git diff":http://www.kernel.org/pub/software/scm/git/docs/git-diff.html
