--- a/text/s0-c02-installing.textile
+++ b/text/s0-c02-installing.textile
@@ -1,6 +1,6 @@
 h2. Installing Git
 
-Before we can start playing with git, we'll have to install it. I'll quickly cover installing Git on Linux, Mac and Windows.  I will not get into really fine detail, because others have done that much better, but I will give you an overview and links as to where to find more detailed instructions on each platform.
+Before we can start playing with Git, we'll have to install it. I'll quickly cover installing Git on Linux, Mac and Windows.  I will not get into really fine detail, because others have done that much better, but I will give you an overview and links as to where to find more detailed instructions on each platform.
 
 For any of these examples, you can find a link to the most current Git source code at 
 "git.or.cz":http://git.or.cz/
@@ -28,7 +28,7 @@ shell. $ yum install git-core
 
 h3. Installing on Mac
 
-You are likely going to want to install Git without the asciidoc dependency because it is a pain to install.   Other than that, what you basically need is Curl and Expat.  With the exception of the Leopard binary OS X installer, you will need the Developer Tools installed.  If you don't have the OS X install discs anymore, you can get the tools from the 
+You are likely going to want to install Git without the asciidoc dependency because it is a pain to install.   Other than that, what you basically need is Curl and Expat.  With the exception of the Leopard binary OS X installer, you will also need the Developer Tools installed.  If you don't have the OS X install discs anymore, you can get the tools from the 
 "Apple Website":http://developer.apple.com/tools/
 
 
