--- a/text/s2-c14-github.textile
+++ b/text/s2-c14-github.textile
@@ -22,7 +22,7 @@ You could just as easily follow and fork someone else's repository of the projec
 
 Let's say there is a popular feature request that is either not completed or not accepted by the main project maintainer.  You can very easily fork the project and keep your patch or patches up to date with the head on a regular basis and people can pull from yours instead.  Perhaps enough demand builds up or enough testing is done from all these users that the patch is accepted.  You can then delete your fork and revert to the original project head.
 
-This will also really change patch submission for large projects.  When Rails is fully on GitHub and integrated into the core team workflow, submitting patches will be far less painful for all parties.  You can fork the project, add your patch and submit a pull request for your branch with the fix to one of the core members or through the ticketing system.  They can add you as a remote easily, create a new testing branch, merge in or rebase your branch, test and accept or reject.  If your patch is ignored or the team doesn't have time to deal with it yet, it's easy to keep up to date by continually rebasing and re-sending the pull requests until it's either rejected or accepted.  It doesn't just go stale until it's difficult to apply the patch anymore.
+This will also really change patch submission for large projects. Instead of emailing patches around, you can fork the project, add your patch and submit a pull request for your branch with the fix to one of the core members or through the ticketing system.  A member of the core team can add you as a remote easily, create a new testing branch, merge in or rebase your branch, test and accept or reject.  If your patch is ignored or the team doesn't have time to deal with it yet, it's easy to keep up to date by continually rebasing and re-sending the pull requests until it's either rejected or accepted.  It doesn't just go stale until it's difficult to apply the patch anymore.
 
 Services like GitHub and an increased adoption of distributed SCM systems will dramatically change open source development workflows on teams of all sizes, in addition to changing the way individual developers work.
 
