--- a/text/s2-c03-normal-workflow.textile
+++ b/text/s2-c03-normal-workflow.textile
@@ -2,6 +2,8 @@ h2. Normal Workflow Examples
 
 Now that we have our repository, let's go through some normal workflow examples of a single person developing.
 
+todo. sidebar:c2-normal-workflow.textile
+
 h3. Ignoring
 
 First off, we will often want Git to automatically ignore certain files - often ones that are automatically generated during our development.  For example, in Rails development we often want to ignore the log files, the production specific configuration files, etc. To do this, we can add patterns into the _.gitignore_ file to tell Git that we don't want it to track them.
@@ -45,6 +47,8 @@ Now we can continue this loop - modifying, adding and committing - during our de
 h3. Interactive Adding
 
 Although that will work for all of your development needs - many developers simply use '-a' nearly every time they commit to just automatically add everything to the index, there is another way of adding files that makes for a more controlled and thematic set of commits.  This is called 'interactive' adding, and it is a very powerful tool to controlling what goes into each commit.
+
+todo. sidebar:c3-add-interactive.textile
 
 Let's say we add a new function to our 'lib/simplegit.rb' file, add a new task to our 'Rakefile' and then add a new 'TODO' file to our project.  Later we come back and want to commit, but we don't remember which files had to do with each other and we don't just want to commit them all together because that's confusing for collaborators trying to review our code. 'Interactive' mode let's us modify our index interactively before committing.  To fire it up, type 'git add -i':
 
